--- a/ATLASWatch/index.html
+++ b/ATLASWatch/index.html
@@ -181,7 +181,7 @@ function getValueFromURL(val) {
 (function() {
 
   // Load any previously saved configuration, if available
-  if(typeof localStorage['op_animation'] !== 'undefined') {
+  if(typeof localStorage['op_analogue'] !== 'undefined') {
     console.log('JS: Load prev saved');
     //document.getElementById('id-owm-api').value            = localStorage['op_owmkey'];
 
